--- a/validation-web/index.html
+++ b/validation-web/index.html
@@ -28,6 +28,13 @@
 
 <body style="padding-left: 2em;">
 <h1>Feedback Nodered Validation</h1><br>
+<h2>Tutorial</h2>
+<div id="tutorial">
+    <label style="padding: 0 2em;">Test 1</label>
+    <button type="button">Start</button>
+    <span style="padding-left: 1em;"></span>
+</div>
+<br>
 <h2>Task 1a</h2>
 <div id="task1a-test1">
     <label style="padding: 0 2em;">Test 1</label>
