--- a/validation-web/index.html
+++ b/validation-web/index.html
@@ -27,50 +27,73 @@
 
 
 <body style="padding-left: 2em;">
-<h1>Feedback Nodered Validation</h1><br>
-<h2>Tutorial</h2>
-<div id="tutorial">
+<h1>Feedback Nodered Validation</h1>
+<hr>
+<div class="row">
+    <h2>Tutorial</h2><br>
+    <div id="tutorial" style="padding-left: 2em;">
+        <button type="button">Play</button>
+        <span style="padding-left: 1em;"></span>
+    </div>
+</div>
+<div id="tutorial-test1">
     <label style="padding: 0 2em;">Test 1</label>
     <button type="button">Start</button>
     <span style="padding-left: 1em;"></span>
+</div>
+
+<br>
+<hr>
+<div class="row">
+    <h2>Problem 1</h2><br>
+    <div id="problem1" style="padding-left: 2em;">
+        <button type="button">Play</button>
+        <span style="padding-left: 1em;"></span>
+    </div>
 </div>
 <br>
-<h2>Task 1a</h2>
-<div id="task1a-test1">
+<h3>Task 1</h3>
+<div id="task1-test1">
     <label style="padding: 0 2em;">Test 1</label>
     <button type="button">Start</button>
     <span style="padding-left: 1em;"></span>
 </div>
-<div id="task1a-test2">
+<div id="task1-test2">
     <label style="padding: 0 2em;">Test 2</label>
     <button type="button">Start</button>
     <span style="padding-left: 1em;"></span>
 </div>
-<div id="task1a-test3">
-    <label style="padding: 0 2em;">Test 3</label>
-    <button type="button">Start</button>
-    <span style="padding-left: 1em;"></span>
-</div>
+
 <br>
-<h2>Task 1b</h2>
-<div id="task1b-test1">
-    <label style="padding: 0 2em;">Test 1</label>
-    <button type="button">Start</button>
-    <span style="padding-left: 1em;"></span>
-</div>
-<div id="task1b-test2">
-    <label style="padding: 0 2em;">Test 2</label>
-    <button type="button">Start</button>
-    <span style="padding-left: 1em;"></span>
-</div>
-<br>
-<h2>Task 2</h2>
+<h3>Task 2</h3>
 <div id="task2-test1">
     <label style="padding: 0 2em;">Test 1</label>
     <button type="button">Start</button>
     <span style="padding-left: 1em;"></span>
 </div>
 <div id="task2-test2">
+    <label style="padding: 0 2em;">Test 2</label>
+    <button type="button">Start</button>
+    <span style="padding-left: 1em;"></span>
+</div>
+
+
+<br>
+<hr>
+<div class="row">
+    <h2>Problem 2</h2><br>
+    <div id="problem2" style="padding-left: 2em;">
+        <button type="button">Play</button>
+        <span style="padding-left: 1em;"></span>
+    </div>
+</div>
+<br>
+<div id="problem2-test1">
+    <label style="padding: 0 2em;">Test 1</label>
+    <button type="button">Start</button>
+    <span style="padding-left: 1em;"></span>
+</div>
+<div id="problem2-test2">
     <label style="padding: 0 2em;">Test 2</label>
     <button type="button">Start</button>
     <span style="padding-left: 1em;"></span>
