Add set metrics buttons

--- a/validation-web/index.html
+++ b/validation-web/index.html
@@ -52,7 +52,8 @@
     </div>
 </div>
 <br>
-<h3>Task 1</h3>
+<h3 style="display: inline-block;">Task 1</h3>
+<button style="margin-left: 2em; background-color: blueviolet;" id="task1" type="button">SET</button>
 <div id="task1-test1">
     <label style="padding: 0 2em;">Test 1</label>
     <button type="button">Start</button>
@@ -65,7 +66,8 @@
 </div>
 
 <br>
-<h3>Task 2</h3>
+<h3 style="display: inline-block;">Task 2</h3>
+<button style="margin-left: 2em; background-color: blueviolet;" id="task2" type="button">SET</button>
 <div id="task2-test1">
     <label style="padding: 0 2em;">Test 1</label>
     <button type="button">Start</button>
@@ -81,7 +83,9 @@
 <br>
 <hr>
 <div class="row">
-    <h2>Problem 2</h2><br>
+    <h2 style="display: inline-block;">Problem 2</h2>
+    <button style="margin-left: 2em; background-color: blueviolet;" id="task3" type="button">SET</button>
+    <br>
     <div id="problem2" style="padding-left: 2em;">
         <button type="button">Play</button>
         <span style="padding-left: 1em;"></span>
